Hello uses style.css

--- a/lib/hello.html
+++ b/lib/hello.html
@@ -1,6 +1,7 @@
 <!-- Author: Alexei(mail: mail@mail.ma -->
 <html>
   <head>
+    <link type="text/css" rel="stylesheet" media="all"href="style.css" />
   </head>
   <body>
     <h1>Hello, porta</h1>
